IW-78 Fix line break in Banner component

--- a/src/styles/_banner.scss
+++ b/src/styles/_banner.scss
@@ -30,6 +30,12 @@
                 top: 40%;
                 left: 24%;
             }
+            br{
+                
+                @media (min-width: 1440px){
+                    display: none;
+                }
+            }
         }
     }
 
